--- a/cs-web-app/index.html
+++ b/cs-web-app/index.html
@@ -16,13 +16,13 @@
       background-color: #ededed;
     }
   </style>
-  <title>cs-web-app</title>
+  <title>Community Scorecard</title>
 </head>
 
 <body>
-  <cs-web-app></cs-web-app>
+  <cs-app></cs-app>
 
-  <script type="module" src="./out-tsc/src/cs-web-app.js"></script>
+  <script type="module" src="./out-tsc/src/cs-app/cs-app.js"></script>
 </body>
 
 </html>
