--- a/cs-web-app/index.html
+++ b/cs-web-app/index.html
@@ -8,6 +8,7 @@
   <base href="/">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
 
   <style>
     html,
