--- a/cs-web-app/index.html
+++ b/cs-web-app/index.html
@@ -9,13 +9,14 @@
   <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
-
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
   <style>
     html,
     body {
       margin: 0;
       padding: 0;
-      font-family: sans-serif;
+      font-family: 'Raleway', sans-serif;
       background-color: #ededed;
     }
   </style>
