--- a/cs-web-app/index.html
+++ b/cs-web-app/index.html
@@ -17,7 +17,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Raleway', sans-serif;
-      background-color: #ededed;
+      background-color: #fefefe;
     }
   </style>
   <title>Community Scorecard</title>
